src/messages.h

struct mdhim_t;
/* Put message */
struct mdhim_putm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	void *key;
	int key_len;
	void *value;
	int value_len;
};
/* Bulk put message */
struct mdhim_bputm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	void **keys;
	int *key_lens;
	void **values;
	int *value_lens;
	int num_keys;
};
/* Get record message */
struct mdhim_getm_t {
	int mtype;  
	int server_rank;
	int size;
	int index;
	int index_type;
	//Operation type e.g., MDHIM_GET_EQ, MDHIM_GET_NEXT, MDHIM_GET_PREV
	int op;  
	/* The key to get if op is MDHIM_GET_EQ
	   If op is MDHIM_GET_NEXT or MDHIM_GET_PREV the key is the last key to start from
	 */
	void *key;
	//The length of the key
	int key_len;
	int num_keys;
};
/* Bulk get record message */
struct mdhim_bgetm_t {
	int mtype;  
	int server_rank;
	int size;
	int index;
	int index_type;
	//Operation type i.e, MDHIM_GET_EQ, MDHIM_GET_NEXT, MDHIM_GET_PREV
	int op;
	void **keys;
	int *key_lens;
        int num_keys;

        //Number of records to retrieve per key given
	int num_recs;
};
/* Delete message */
struct mdhim_delm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	void *key;
	int key_len; 
};
/* Bulk get receive message */
struct mdhim_bgetrm_t {
	int mtype;
	int server_rank;
	int size;
	int index;
	int index_type;
	int error;
	void **keys;
	int *key_lens;
	void **values;
	int *value_lens;
	int num_keys;
	struct mdhim_bgetrm_t *next;
};
int send_rangesrv_work(struct mdhim_t *md, int dest, void *message);
int send_all_rangesrv_work(struct mdhim_t *md, void **messages, int num_srvs);
int receive_rangesrv_work(struct mdhim_t *md, int *src, void **message);
int send_client_response(struct mdhim_t *md, int dest, void *message, int *sizebuf,
			 void **sendbuf, MPI_Request **size_req, MPI_Request **msg_req);
int receive_client_response(struct mdhim_t *md, int src, void **message);
int receive_all_client_responses(struct mdhim_t *md, int *srcs, int nsrcs, 
				 void ***messages);
int pack_put_message(struct mdhim_t *md, struct mdhim_putm_t *pm, void **sendbuf, int *sendsize);
int pack_bput_message(struct mdhim_t *md, struct mdhim_bputm_t *bpm, void **sendbuf, int *sendsize);
int unpack_put_message(struct mdhim_t *md, void *message, int mesg_size, void **pm);
int unpack_bput_message(struct mdhim_t *md, void *message, int mesg_size, void **bpm);
int pack_get_message(struct mdhim_t *md, struct mdhim_getm_t *gm, void **sendbuf, int *sendsize);
int pack_bget_message(struct mdhim_t *md, struct mdhim_bgetm_t *bgm, void **sendbuf, int *sendsize);
int unpack_get_message(struct mdhim_t *md, void *message, int mesg_size, void **gm);
int unpack_bget_message(struct mdhim_t *md, void *message, int mesg_size, void **bgm);
int pack_bgetrm_message(struct mdhim_t *md, struct mdhim_bgetrm_t *bgrm, void **sendbuf, int *sendsize);
int unpack_bgetrm_message(struct mdhim_t *md, void *message, int mesg_size, void **bgrm);
int pack_del_message(struct mdhim_t *md, struct mdhim_delm_t *dm, void **sendbuf, int *sendsize);