java_api/MdhimLibrary.java

		public int apply(@Ptr long db_handle, @Ptr long key, @Ptr long key_len, @Ptr long data, @Ptr long data_len) {
			return apply(Pointer.pointerToAddress(db_handle), (Pointer)Pointer.pointerToAddress(key, DefaultParameterizedType.paramType(Pointer.class, null)), (Pointer)Pointer.pointerToAddress(key_len, Integer.class), (Pointer)Pointer.pointerToAddress(data, DefaultParameterizedType.paramType(Pointer.class, null)), (Pointer)Pointer.pointerToAddress(data_len, Integer.class));
		}
	};
	/** <i>native declaration : mdhim-tng-ycsb/src/data_store.h:983</i> */
	public static abstract class mdhim_store_del_fn_t extends Callback<mdhim_store_del_fn_t > {
		public int apply(Pointer<? > db_handle, Pointer<? > key, int key_len) {
			return apply(Pointer.getPeer(db_handle), Pointer.getPeer(key), key_len);
		}
		public int apply(@Ptr long db_handle, @Ptr long key, int key_len) {
			return apply(Pointer.pointerToAddress(db_handle), Pointer.pointerToAddress(key), key_len);
		}
	};
	/** <i>native declaration : mdhim-tng-ycsb/src/data_store.h:984</i> */
	public static abstract class mdhim_store_commit_fn_t extends Callback<mdhim_store_commit_fn_t > {
		public int apply(Pointer<? > db_handle) {
			return apply(Pointer.getPeer(db_handle));
		}
		public int apply(@Ptr long db_handle) {
			return apply(Pointer.pointerToAddress(db_handle));
		}
	};
	/** <i>native declaration : mdhim-tng-ycsb/src/data_store.h:985</i> */
	public static abstract class mdhim_store_close_fn_t extends Callback<mdhim_store_close_fn_t > {
		public int apply(Pointer<? > db_handle, Pointer<? > db_stats) {
			return apply(Pointer.getPeer(db_handle), Pointer.getPeer(db_stats));
		}
		public int apply(@Ptr long db_handle, @Ptr long db_stats) {
			return apply(Pointer.pointerToAddress(db_handle), Pointer.pointerToAddress(db_stats));
		}
	};
	/**
	 * Initializes the data store based on the type given (i.e., LEVELDB, etc...)<br>
	 * Original signature : <code>mdhim_store_t* mdhim_db_init(int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/data_store.h:1049</i>
	 */
	public static Pointer<mdhim_store_t > mdhim_db_init(int db_type) {
		return (Pointer)Pointer.pointerToAddress(mdhim_db_init$2(db_type), mdhim_store_t.class);
	}
	@Ptr 
	@Name("mdhim_db_init") 
	protected native static long mdhim_db_init$2(int db_type);
	/**
	 * Original signature : <code>int send_rangesrv_work(mdhim_t*, int, void*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1171</i>
	 */
	public static int send_rangesrv_work(Pointer<mdhim_t > md, int dest, Pointer<? > message) {
		return send_rangesrv_work(Pointer.getPeer(md), dest, Pointer.getPeer(message));
	}
	protected native static int send_rangesrv_work(@Ptr long md, int dest, @Ptr long message);
	/**
	 * Original signature : <code>int send_all_rangesrv_work(mdhim_t*, void**, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1173</i>
	 */
	public static int send_all_rangesrv_work(Pointer<mdhim_t > md, Pointer<Pointer<? > > messages, int num_srvs) {
		return send_all_rangesrv_work(Pointer.getPeer(md), Pointer.getPeer(messages), num_srvs);
	}
	protected native static int send_all_rangesrv_work(@Ptr long md, @Ptr long messages, int num_srvs);
	/**
	 * Original signature : <code>int receive_rangesrv_work(mdhim_t*, int*, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1175</i>
	 */
	public static int receive_rangesrv_work(Pointer<mdhim_t > md, Pointer<Integer > src, Pointer<Pointer<? > > message) {
		return receive_rangesrv_work(Pointer.getPeer(md), Pointer.getPeer(src), Pointer.getPeer(message));
	}
	protected native static int receive_rangesrv_work(@Ptr long md, @Ptr long src, @Ptr long message);
	/**
	 * Original signature : <code>int send_client_response(mdhim_t*, int, void*, void**, MPI_Request**, MPI_Request**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1177</i>
	 */
	public static int send_client_response(Pointer<mdhim_t > md, int dest, Pointer<? > message, Pointer<Pointer<? > > sendbuf, Pointer<Pointer<MdhimLibrary.MPI_Request > > size_req, Pointer<Pointer<MdhimLibrary.MPI_Request > > msg_req) {
		return send_client_response(Pointer.getPeer(md), dest, Pointer.getPeer(message), Pointer.getPeer(sendbuf), Pointer.getPeer(size_req), Pointer.getPeer(msg_req));
	}
	protected native static int send_client_response(@Ptr long md, int dest, @Ptr long message, @Ptr long sendbuf, @Ptr long size_req, @Ptr long msg_req);
	/**
	 * Original signature : <code>int receive_client_response(mdhim_t*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1179</i>
	 */
	public static int receive_client_response(Pointer<mdhim_t > md, int src, Pointer<Pointer<? > > message) {
		return receive_client_response(Pointer.getPeer(md), src, Pointer.getPeer(message));
	}
	protected native static int receive_client_response(@Ptr long md, int src, @Ptr long message);
	/**
	 * Original signature : <code>int receive_all_client_responses(mdhim_t*, int*, int, void***)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1181</i>
	 */
	public static int receive_all_client_responses(Pointer<mdhim_t > md, Pointer<Integer > srcs, int nsrcs, Pointer<Pointer<Pointer<? > > > messages) {
		return receive_all_client_responses(Pointer.getPeer(md), Pointer.getPeer(srcs), nsrcs, Pointer.getPeer(messages));
	}
	protected native static int receive_all_client_responses(@Ptr long md, @Ptr long srcs, int nsrcs, @Ptr long messages);
	/**
	 * Original signature : <code>int pack_put_message(mdhim_t*, mdhim_putm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1183</i>
	 */
	public static int pack_put_message(Pointer<mdhim_t > md, Pointer<mdhim_putm_t > pm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_put_message(Pointer.getPeer(md), Pointer.getPeer(pm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_put_message(@Ptr long md, @Ptr long pm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int pack_bput_message(mdhim_t*, mdhim_bputm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1185</i>
	 */
	public static int pack_bput_message(Pointer<mdhim_t > md, Pointer<mdhim_bputm_t > bpm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_bput_message(Pointer.getPeer(md), Pointer.getPeer(bpm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_bput_message(@Ptr long md, @Ptr long bpm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int unpack_put_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1187</i>
	 */
	public static int unpack_put_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > pm) {
		return unpack_put_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(pm));
	}
	protected native static int unpack_put_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long pm);
	/**
	 * Original signature : <code>int unpack_bput_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1189</i>
	 */
	public static int unpack_bput_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > bpm) {
		return unpack_bput_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(bpm));
	}
	protected native static int unpack_bput_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long bpm);
	/**
	 * Original signature : <code>int pack_get_message(mdhim_t*, mdhim_getm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1191</i>
	 */
	public static int pack_get_message(Pointer<mdhim_t > md, Pointer<mdhim_getm_t > gm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_get_message(Pointer.getPeer(md), Pointer.getPeer(gm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_get_message(@Ptr long md, @Ptr long gm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int pack_bget_message(mdhim_t*, mdhim_bgetm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1193</i>
	 */
	public static int pack_bget_message(Pointer<mdhim_t > md, Pointer<mdhim_bgetm_t > bgm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_bget_message(Pointer.getPeer(md), Pointer.getPeer(bgm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_bget_message(@Ptr long md, @Ptr long bgm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int unpack_get_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1195</i>
	 */
	public static int unpack_get_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > gm) {
		return unpack_get_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(gm));
	}
	protected native static int unpack_get_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long gm);
	/**
	 * Original signature : <code>int unpack_bget_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1197</i>
	 */
	public static int unpack_bget_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > bgm) {
		return unpack_bget_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(bgm));
	}
	protected native static int unpack_bget_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long bgm);
	/**
	 * Original signature : <code>int pack_bgetrm_message(mdhim_t*, mdhim_bgetrm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1199</i>
	 */
	public static int pack_bgetrm_message(Pointer<mdhim_t > md, Pointer<mdhim_bgetrm_t > bgrm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_bgetrm_message(Pointer.getPeer(md), Pointer.getPeer(bgrm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_bgetrm_message(@Ptr long md, @Ptr long bgrm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int unpack_bgetrm_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1201</i>
	 */
	public static int unpack_bgetrm_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > bgrm) {
		return unpack_bgetrm_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(bgrm));
	}
	protected native static int unpack_bgetrm_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long bgrm);
	/**
	 * Original signature : <code>int pack_del_message(mdhim_t*, mdhim_delm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1203</i>
	 */
	public static int pack_del_message(Pointer<mdhim_t > md, Pointer<mdhim_delm_t > dm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_del_message(Pointer.getPeer(md), Pointer.getPeer(dm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_del_message(@Ptr long md, @Ptr long dm, @Ptr long sendbuf, @Ptr long sendsize);
